policies/security-context/disallow-run-as-root-user/resources.yaml
###### Pods - Bad
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    runAsUser: 0
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      runAsUser: 0
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
  - name: container02
    image: dummyimagename
    securityContext:
      runAsUser: 0
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    runAsUser: 0
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod06
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
---
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    runAsUser: 1
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      runAsUser: 1
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
  - name: container02
    image: dummyimagename
    securityContext:
      runAsUser: 1
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      runAsUser: 1
  - name: container02
    image: dummyimagename
    securityContext:
      runAsUser: 2
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      runAsUser: 1
  - name: container02
    image: dummyimagename
    securityContext:
      runAsUser: 2
  securityContext:
    runAsUser: 10
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod08
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod09
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    runAsUser: 1
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod10
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
